@@ -24,6 +24,9 @@ Next release, whenever it is:
     Policy Changes:
     * ValuesAndExpressions::RequireInterpolationOfMetachars now allows sigils
       in the arguments to "use vars".  Contributed by Kevin Ryde, RT #47318.
+    * ValuesAndExpressions::RequireInterpolationOfMetachars now properly
+      ignores email addesses, if you have Email::Address installed.  Inspired
+      by the Kevin Ryde contribution in RT #47318.
 
 [1.103] Released on 2009-08-03
 
